Increase the hamburger menu breakpoint and padding left and right on the navbar

--- a/css/main.css
+++ b/css/main.css
@@ -1121,3 +1121,17 @@ body {
     line-height: 2.5rem;
   }
 }
+
+@media (min-width: 976px) {
+  .lg\:block {
+    display: block;
+  }
+
+  .lg\:flex {
+    display: flex;
+  }
+
+  .lg\:hidden {
+    display: none;
+  }
+}
